[DO NOT MERGE] Stream packed-refs storage
Speedup by a factor of 100x the storage of packed-refs
to disk by using a streaming writer instead of an
in-memory array.

The new behaviour can be enabled by the Java property
'ghs.jgit.packed-ref.stream-packed-refs'.

Change-Id: I232e60ea37848879005490f41e1abc8c75a60c33